# SZE-MOSZE-2020-Cminusminus

./: .gitignore  Blood_Raven.json  CMakeCache.txt  CMakeLists.txt  Dark_Wanderer.json  Fallen.json  Game.cpp  Game.h  Game_8h_source.html  Hero.cpp  Hero.h  Hero_8h_source.html  JSON.cpp  JSON.h  JSONParser.cpp  JSONParser.h  JSONParser_8h_source.html  JSON_8h_source.html  Makefile  Map.cpp  Map.h  Map_8h_source.html  MarkedMap.cpp  MarkedMap.h  MarkedMap_8h_source.html  Monster.cpp  Monster.h  Monster_8h_source.html  PreparedGame.cpp  PreparedGame.h  PreparedGame_8h_source.html  README.md  Renderer.cpp  Renderer.h  Renderer_8h_source.html  Zombie.json  _r_e_a_d_m_e_8md.html  annotated.html  autotoc_md0.html  character.cpp  (+137 more)
.github/workflows/: battles_test.yml  battles_tests.yml  doxypush.yml  tests.yml
bad_units/: test_unit_badDMG.json  test_unit_badHP.json  test_unit_badLines.json  test_unit_badSpacing.json  test_unit_mixedInputs.json  test_unit_plusData.json  test_unit_plusDataWhSpace.json
docker/: Dockerfile  dox_docker  sca_docker  unittest_docker
maps/: map2.txt
scenarios/: Blood_Raven.json  Dark_Wanderer.json  Fallen.json  Zombie.json
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+16 more)
unit-testing/: CMakeLists.txt
unit-testing/incorrect_units/: test_unit_badDamage.json  test_unit_badHP.json
units/: good_outputs.txt  run_battle_test.py  test_unit_1.json  test_unit_2.json  test_unit_3.json  test_unit_4.json  test_unit_badDamage.json  test_unit_badHP.json
